--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -107,7 +107,7 @@ body {
 
 
 
-#gallery {
+#portfolio {
 	background-color:#1b1b19;
 	float:left;
 	width:100%;
@@ -178,7 +178,7 @@ body {
 		background-size:cover;
 		}
 		
-	#gallery {
+	#portfolio {
 		background:#fff;
   }
 						
