--- a/src/css/site.css
+++ b/src/css/site.css
@@ -3,7 +3,7 @@
  * ========================================================================= */
 
 /**
- * Default < XXXpx
+ * Default < 724px
  * ------------------------------------------------------------------------- */
 
 /**
@@ -23,12 +23,14 @@ body {
 }
 
 a {
-  color: #eee;
+  color: #fff;
   text-decoration: none;
+  
+  transition: all 300ms cubic-bezier(0.785, 0.135, 0.15, 0.86) 0ms;
 }
 
 a:hover {
-  color: #fff;
+  color: #d9d9d9;
 }
 
 h1,
@@ -51,6 +53,7 @@ h2 small {
 }
 
 p {
+  margin-top: 0;
   margin-bottom: 2.4rem;
   line-height: 2.4rem;
 }
@@ -61,6 +64,10 @@ p.featured {
 
 small {
   display: block;
+}
+
+ul {
+  font-size: 1.6rem;
 }
 
 .tfs-logo {
@@ -123,7 +130,7 @@ section,
 footer {
   padding: 2.4rem;
 
-  font-size: 1.6rem;
+  font-size: 1.4rem;
 }
 
 section .img--round {
@@ -179,4 +186,115 @@ section .img--round {
 .footer .map {
   height: 50vh;
   width: 100%;
+}
+
+
+
+/**
+ * Medium > 724px < 968px
+ * ------------------------------------------------------------------------- */
+
+@media screen and (min-width: 724px) {
+
+  /**
+   * Structure
+   * ----------------------------------------- */
+
+  p.featured {
+    font-family: 'Vollkorn', 'serif';
+    font-size: 2.6rem;
+    font-weight: 400;
+    line-height: 3rem;
+    text-align: center;
+  }
+
+  /**
+   * Header
+   * ----------------------------------------- */
+
+  .header {
+    background: no-repeat center url(../images/header.jpg);
+    background-size: cover;
+  }
+
+  .header h1 {
+    height: 17rem;
+  }
+
+
+  /**
+   * Nav
+   * ----------------------------------------- */
+
+  .nav {
+    display: flex;
+    justify-content: center;
+
+    background-color: #000;
+  }
+
+  .nav.stick {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 3000;
+  }
+
+  .nav a {
+    display: block;
+    padding: 2rem;
+
+    color: #d9d9d9;
+    font-size: 1.4rem;
+    text-transform: uppercase;
+  }
+
+  .nav a.active {
+    color: #e1903e;
+  }
+
+  .nav a:hover {
+    color: #e1903e;
+  }
+
+
+  /**
+   * Section
+   * ----------------------------------------- */
+
+  section {
+    padding: 12rem 4rem;
+  }
+
+
+  /**
+   * Services
+   * ------------------------------------------- */
+
+  .service-list {
+    width: 60vw;
+    max-width: 50rem;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+
+  /**
+   * Portfolio
+   * ------------------------------------------- */
+  
+  .portfolio .flexslider {
+    margin-left: -4rem;
+    margin-right: -4rem;
+  }
+
+  /**
+   * Footer
+   * ------------------------------------------- */
+
+  .footer .map {
+    width: 60vw;
+    max-height: 40rem;
+  }
 }
