--- a/src/css/site.css
+++ b/src/css/site.css
@@ -187,6 +187,7 @@ section .img--round {
 .portfolio .flex-control-nav {
   position: absolute;
   top: 50vw;
+  height: 3rem;
   z-index: 500;
 }
 
@@ -212,6 +213,8 @@ section .img--round {
 
 .portfolio .flexslider h4 {
   margin-bottom: 0;
+  margin-top: 0;
+
   font-size: 2.4rem;
   text-align: center;
   text-transform: uppercase;
@@ -240,6 +243,43 @@ section .img--round {
   margin-left: 0;
 
   text-transform: uppercase;
+}
+
+.portfolio .flexslider dd.m-b {
+  margin-bottom: 2.4rem;
+}
+
+.portfolio .slide-text {
+  position: relative;
+
+  padding-top: 3.6rem;
+  padding-bottom: 1.2rem;
+}
+
+.portfolio .slide-text-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -2;
+  
+  background-position: bottom center;
+  background-size: cover;
+  transform: scaleY(-1);
+}
+
+.portfolio .slide-text-bg::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -2;
+
+  content: " ";
+
+  background: linear-gradient(0deg, rgba(0,0,0,.5), rgba(0,0,0,1));
 }
 
 /**
@@ -374,6 +414,8 @@ section .img--round {
   }
 
   .portfolio .flexslider dd {
+    margin-bottom: 0;
+    
     text-align: left;
   }
 
