--- a/src/css/site.css
+++ b/src/css/site.css
@@ -275,6 +275,12 @@ section .img--round {
     padding: 12rem 4rem;
   }
 
+  section .content {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 56rem;
+  }
+
 
   /**
    * Services
