Contact min height
Fixes #31

--- a/src/css/site.css
+++ b/src/css/site.css
@@ -176,6 +176,7 @@ section .img--round {
  * ------------------------------------------- */
 
 .footer {
+  min-height: 100vh;
   text-align: center;
 }
 
