--- a/src/css/site.css
+++ b/src/css/site.css
@@ -17,13 +17,13 @@ body {
 
   font-family: 'Open Sans', 'sans-serif';
   font-size: 62.5%;
-  color: #fff;
+  color: #e6e6dc;
 
   background-color: #000;
 }
 
 a {
-  color: #fff;
+  color: #e6e6dc;
   text-decoration: none;
   
   transition: all 300ms cubic-bezier(0.785, 0.135, 0.15, 0.86) 0ms;
