Remove section bg colours
Fixes #35

--- a/src/css/site.css
+++ b/src/css/site.css
@@ -90,7 +90,7 @@ ul {
 
   height: 98vh;
 
-  background: no-repeat center url(../images/header.jpg) #e1903e;
+  background: no-repeat center url(../images/header.jpg);
   background-size: cover;
 }
 
@@ -151,7 +151,7 @@ section .img--round {
  * ------------------------------------------- */
 
 .about {
-  background: no-repeat center url(../images/panel.jpg) #5e97a0;
+  background: no-repeat center url(../images/panel.jpg);
   background-position: cover;
 }
 
@@ -161,7 +161,7 @@ section .img--round {
  * ------------------------------------------- */
 
 .services {
-  background: no-repeat center url(../images/couch.jpg) #e1903e;
+  background: no-repeat center url(../images/couch.jpg);
   background-size: cover;
 }
 
