--- a/src/css/site.css
+++ b/src/css/site.css
@@ -19,13 +19,13 @@ body {
   font-size: 62.5%;
   color: #e6e6dc;
 
-  background-color: #000;
+  background-color: #111;
 }
 
 a {
   color: #e6e6dc;
   text-decoration: none;
-  
+
   transition: all 300ms cubic-bezier(0.785, 0.135, 0.15, 0.86) 0ms;
 }
 
@@ -100,7 +100,7 @@ ul {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  
+
   width: 100%;
 }
 
@@ -174,70 +174,67 @@ section .img--round {
  * ------------------------------------------- */
 
 .portfolio {
-  padding-bottom: 0;
   padding-left: 0;
   padding-right: 0;
+  padding-bottom: 0;
 
-  overflow: hidden;
+  color: #eee;
+
+  background-color: #111;
 }
 
-.portfolio .flexslider {
-  position: relative;
+.gridder-list {
+  width: 50%;
+  font-size: 0;
+
+  cursor: pointer;
+}
+
+.gridder-list:nth-child(n) {
   margin-bottom: 0;
-
-  background-color: transparent;
-  border: 0 none;
-
-  text-shadow: none;
+  margin-right: 0;
 }
 
-.portfolio .flex-control-nav {
-  position: absolute;
-  top: 50vw;
-  height: 3rem;
-  z-index: 500;
-}
-
-.portfolio .flex-control-paging li a {
-  width: 1.6rem;
-  height: 1.6rem;
-
-  background-color: rgba(255,255,255,.5);
-}
-
-.portfolio .flex-control-paging li a.flex-active {
-  background-color: rgba(255,255,255,.9);
-}
-
-.portfolio .flex-direction-nav a {
-  top: 28vw;
-}
-
-.portfolio .flex-item {
+.gridder-list img {
   width: 100%;
-  height: 56.25vw;
 }
 
-.portfolio .flexslider h4 {
-  margin-bottom: 0;
-  margin-top: 0;
+.gridder-show {
+  margin-bottom: 2.4rem;
+  background-color: #111;
+}
+
+.gridder-show h4,
+.gridder-show p,
+.gridder-show dl {
+  margin-left: 2.4rem;
+  margin-right: 2.4rem;
+}
+
+.gridder-show h4 {
+  margin-bottom: 1.2rem;
+  margin-top: 1.2rem;
 
   font-size: 2.4rem;
   text-align: center;
   text-transform: uppercase;
 }
 
-.portfolio .flexslider p {
+.gridder-show img {
+  max-width: 100%;
+}
+
+.gridder-show p {
   text-align: center;
 }
 
-.portfolio .flexslider dl {
+.gridder-show dl {
   display: flex;
   flex-wrap: wrap;
 }
 
-.portfolio .flexslider dt,
-.portfolio .flexslider dd {
+.gridder-show dt,
+.gridder-show dd {
   padding: 0 1.2rem;
   box-sizing: border-box;
   flex: 0 0 100%;
@@ -245,55 +242,22 @@ section .img--round {
   text-align: center;
 }
 
-.portfolio .flexslider dd {
+.gridder-show dd {
   margin-bottom: 1.2rem;
   margin-left: 0;
 
   text-transform: uppercase;
 }
 
-.portfolio .flexslider dd.m-b {
-  margin-bottom: 2.4rem;
-}
 
-.portfolio .slide-text {
-  position: relative;
-
-  padding-top: 3.6rem;
-  padding-bottom: 1.2rem;
-}
-
-.portfolio .slide-text-bg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: -2;
-  
-  background-position: bottom center;
-  background-size: cover;
-  transform: scaleY(-1);
-}
-
-.portfolio .slide-text-bg::after {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: -2;
-
-  content: " ";
-
-  background: linear-gradient(0deg, rgba(0,0,0,.5), rgba(0,0,0,1));
-}
 
 /**
  * Footer
  * ------------------------------------------- */
 
 .footer {
+  clear: both;
+
   text-align: center;
 
   background: no-repeat center url(../images/wall.jpg);
@@ -432,24 +396,14 @@ section .img--round {
    * Portfolio
    * ------------------------------------------- */
 
-  .portfolio {
-    padding-top: 2.4rem;
+  .portfolio h2 {
+    padding-bottom: 4rem;
   }
 
-  .portfolio .flexslider dt,
-  .portfolio .flexslider dd {
-    flex: 0 0 50%;
+  .gridder-list {
+    width: 25%;
   }
 
-  .portfolio .flexslider dt {
-    text-align: right;
-  }
-
-  .portfolio .flexslider dd {
-    margin-bottom: 0;
-    
-    text-align: left;
-  }
 
 
   /**
@@ -494,12 +448,8 @@ section .img--round {
    * Portfolio
    * ------------------------------------------- */
 
-  .portfolio {
-    padding-top: 4.8rem;
-  }
-
-  .portfolio h2 {
-    margin-bottom: 4rem;
+  .gridder-list {
+    width: 20%;
   }
 
 
@@ -520,4 +470,22 @@ section .img--round {
 
     content: "•"
   }
- }
+}
+
+
+ /**
+ * X-Large < 1200px
+ * ------------------------------------------------------------------------- */
+
+ @media screen and (min-width: 1200px) {
+
+  /**
+   * Portfolio
+   * ------------------------------------------- */
+
+  .gridder {
+    margin-left: auto;
+    margin-right: auto;
+    width: 1100px;
+  }
+}
