--- a/src/css/site.css
+++ b/src/css/site.css
@@ -483,9 +483,7 @@ section .img--round {
    * Portfolio
    * ------------------------------------------- */
 
-  .gridder {
-    margin-left: auto;
-    margin-right: auto;
-    width: 1100px;
+  .gridder-list {
+    width: 10%;
   }
 }
