--- a/src/css/site.css
+++ b/src/css/site.css
@@ -186,6 +186,7 @@ section .img--round {
 }
 
 .gridder-list {
+  position: relative;
   width: 50%;
   font-size: 0;
 
@@ -249,6 +250,19 @@ section .img--round {
   margin-left: 0;
 
   text-transform: uppercase;
+}
+
+.gridder.hasSelectedItem .gridder-list:not(.selectedItem):after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  content: "";
+
+  background: #111;
+  opacity: .5;
 }
 
 
