--- a/src/css/site.css
+++ b/src/css/site.css
@@ -84,12 +84,8 @@ ul {
  * ------------------------------------------- */
 
 .header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-
-  height: 98vh;
+  padding-top: 15rem;
+  height: 100vh;
 
   background: no-repeat center url(../images/header.jpg);
   background-size: cover;
@@ -120,8 +116,60 @@ ul {
  * Nav
  * ------------------------------------------- */
 
-.nav {
+#menu {
+  position: absolute;
+  top: 30rem;
+  width: 100%;
+
+  padding-top: 1.6rem;
+  padding-bottom: 1.6rem;
+}
+
+#menu .nav {
+  display: block;
+  margin-top: 1.2rem;
+}
+
+#menu .nav.collapsed {
   display: none;
+}
+
+#menu .nav a {
+  display: block;
+  padding: .6rem;
+
+  font-size: 1.6rem;
+  text-align: center;
+}
+
+#menu .nav-toggler {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 3.6rem;
+  padding: .25rem .75rem;
+
+  background-color: transparent;
+  border: 1px solid rgba(255,255,255,.1);
+  border-radius: .25rem;
+  color: rgba(255,255,255,.9);
+  font-size: 1.25rem;
+  line-height: 1;
+}
+
+#menu .nav-toggler:focus {
+  outline: 0 none transparent;
+}
+
+#menu .nav-toggler-icon {
+  display: inline-block;
+  width: 1.5em;
+  height: 1.5em;
+  vertical-align: middle;
+  content: "";
+  background: no-repeat center center;
+  background-size: 100% 100%;
+  background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(255, 255, 255, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
 
 
@@ -373,7 +421,9 @@ section .img--round {
    * ----------------------------------------- */
 
   .header {
-    height: calc(100vh - 5.5rem);
+    display: flex;
+    padding-top: 0;
+    height: calc(100vh - 6.6rem);
   }
 
   .header h1 {
@@ -385,11 +435,25 @@ section .img--round {
    * Nav
    * ----------------------------------------- */
 
-  .nav {
+  #menu {
+    background-color: #111;
+    position: relative;
+    top: 0;
+  }
+
+  #menu .nav-toggler {
+    display: none;
+  }
+
+  #menu .nav.collapsed {
+    display: flex;
+  }
+
+  #menu .nav {
+    margin-top: 0;
     display: flex;
     justify-content: center;
-
-    background-color: #000;
+    background-color: #111;
   }
 
   .nav.stick {
