--- a/src/css/site.css
+++ b/src/css/site.css
@@ -229,7 +229,7 @@ section .img--round {
   color: #eee;
 
   background-color: #111;
-  background: no-repeat center url(../images/portfolio.jpg);
+  background: no-repeat top center url(../images/portfolio.jpg);
   background-size: cover;
   background-position: fixed;
 }
