--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -1,3 +1,11 @@
-body {
-  background-color: blue;
-}
+//==========  Imports  ==========//
+
+// Import Tailwind preflight
+@tailwind base;
+
+// Import Tailwind components
+@tailwind components;
+
+// Import Tailwind utilities
+// TailwindCSS recommends leaving utilities till last to ensure they aren't overwritten.
+@tailwind utilities;
