--- a/site/index.njk
+++ b/site/index.njk
@@ -4,8 +4,10 @@ title: Boutique post-production in Ponsonby, Auckland
 meta_description: Boutique post-production in Ponsonby, Auckland
 ---
 
-<main>
-  MAIN!
-
-  <h1>The Thing</h1>
-</main>
+{% include "components/header.njk" %}
+{% include "components/navbar.njk" %}
+{% include "components/portfolio.njk" %}
+{% include "components/about.njk" %}
+{% include "components/services.njk" %}
+{% include "components/upload.njk" %}
+{% include "components/contact.njk" %}
