--- a/site/includes/components/header.njk
+++ b/site/includes/components/header.njk
@@ -1,1 +1,13 @@
-THE FINISHING SUITE
+<header>
+  <div class="container mx-auto">
+
+    <h1 class="sr-only">The Finishing Suite</h1>
+    <img src="images/logo/tfs_logo.png" alt="The Finishing Suite" />
+
+    <div>
+      <a href="https://www.instagram.com/thefinishingsuite" alt="Instagram - @thefinishingsuite" target="_blank">
+        <i class="fab fa-instagram"></i>
+      </a>
+    </div>
+  </div>
+</header>
