--- a/site/includes/components/about.njk
+++ b/site/includes/components/about.njk
@@ -1,1 +1,28 @@
-ABOUT
+<section id="about">
+  <div class="container">
+    <h2>About</h2>
+
+    <p>Not long ago, high-end motion picture finishing required expensive turn-key systems and huge overheads, but not anymore.</p>
+    <p>A downside of technology becoming so accessible has been many in the new generation of post-production operators who don't fully understand the craft, what they're doing or why they’re doing it. They may be able to get your work through a tech check, but are they making it the best it can be, or letting down your project at the final hurdle?</p>
+    <p>At The Finishing Suite, you have the best of both worlds — the low overheads and flexibility of a modern boutique shop, driven by a finishing expert with 15 years of experience working in high-end facilities.</p>
+    <p>I’ve delivered hundreds of hours of finished material for distribution all over the world, transitioned from SD to HD and tape to digital, and had a hand in pioneering new workflows for bleeding-edge formats as they emerged over the years. I know how technology has evolved, and have a strong grip on where it's going tomorrow.</p>
+    <p>Online editing must be more than just a tech-check — while meeting technical specifications should be a given, it’s definitely not the whole end game. It’s also about delivering a quality finish of the highest production values that builds on the hard work the rest of your team has put into your project.</p>
+    <p>From TVCs to television to feature films and all points in between, I'm passionate about using the finishing process to tastefully enhance your storytelling and take your work to the next level.</p>
+    <p>Want to know more? Drop by, raid the beer fridge, and let's talk about how we can give your project the finish it deserves.</p>
+    <p>The Finishing Suite is conveniently located right in the heart of Ponsonby — just two minutes walk from Ponsonby Central.</p>
+  </div>
+
+  <div class="container">
+    <a href="https://www.imdb.com/name/nm1403724" target="_blank">
+      <img class="" src="images/alastair.jpg" alt="Alastair Tye Samson">
+      <h3>
+        Alastair Tye Samson
+        <small>Finishing Artist</small>
+      </h3>
+    </a>
+    <p>For fifteen years I have worked as an Online Editor, Colourist, and all-round motion picture finishing nerd.</p>
+    <p>I offer inspiration and experience using DaVinci Resolve, Autodesk Smoke, and Avid Symphony to finesse films, television shows, music videos and TVCs to be more awesome. I am fast and meticulous with an up-to-date knowledge of technology and a strong creative eye.</p>
+    <p>Over my 20 years experience in the screen industries I have worked with many high profile companies such as Weta Digital, Images&Sound, Warner Brothers NZ, South Pacific Pictures, Jam TV and heaps of others.</p>
+    <p>I love stories and storytelling. In 2009 I co-founded Hybrid Motion Pictures, a filmmaking collective with whom I produced and self-distributed my first indie feature film, JAKE, which was released theatrically in 2014.</p>
+  </div>
+</section>
