--- a/site/includes/components/navbar.njk
+++ b/site/includes/components/navbar.njk
@@ -1,1 +1,8 @@
-NAVBAR
+<nav>
+  <a href="#portfolio">Portfolio</a>
+  <a href="#about">About</a>
+  <a href="#services">Services</a>
+  <a href="#upload">Upload</a>
+  <a href="#contact">Contact</a>
+  <a href="http://www.thefinishingsuite.co.nz/docs/tfs_handover_recommedations_20180528.pdf" target="_blank">Handover</a>
+</nav>
