--- a/site/includes/components/about.njk
+++ b/site/includes/components/about.njk
@@ -14,7 +14,7 @@
 
   <div class="container">
     <a href="https://www.imdb.com/name/nm1403724" target="_blank">
-      <img class="" src="images/alastair.jpg" alt="Alastair Tye Samson">
+      <img class="" src="/images/people/alastair.jpg" alt="Alastair Tye Samson">
       <h3>
         Alastair Tye Samson
         <small>Finishing Artist</small>
