--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -4,10 +4,15 @@
 @tailwind base;
 
 // Import our custom component styles
+@import 'variables';
 @import 'base/all';
 
 // Import Tailwind components
 @tailwind components;
+
+
+// Import our custom component styles
+@import 'components/all';
 
 // Import Tailwind utilities
 // TailwindCSS recommends leaving utilities till last to ensure they aren't overwritten.
