--- a/site/includes/components/header.njk
+++ b/site/includes/components/header.njk
@@ -1,13 +1,11 @@
-<header>
-  <div class="container mx-auto">
+<header class="header text-center bg-cover bg-center" style="background-image: url(/images/backgrounds/tablet.jpg)">
+  <div class="container mx-auto flex flex-col justify-center h-full">
 
     <h1 class="sr-only">The Finishing Suite</h1>
-    <img src="images/logo/tfs_logo.png" alt="The Finishing Suite" />
+    <img class="w-3/4 mx-auto" src="images/logo/tfs-white.svg" alt="The Finishing Suite" />
 
-    <div>
-      <a href="https://www.instagram.com/thefinishingsuite" alt="Instagram - @thefinishingsuite" target="_blank">
-        <i class="fab fa-instagram"></i>
-      </a>
-    </div>
+    <a class="text-4xl" href="https://www.instagram.com/thefinishingsuite" alt="Instagram - @thefinishingsuite" target="_blank">
+      <i class="fab fa-instagram"></i>
+    </a>
   </div>
 </header>
