--- a/site/includes/components/services.njk
+++ b/site/includes/components/services.njk
@@ -1,7 +1,9 @@
-<section id="services">
-  <div class="container">
+{% from "components/macros.njk" import title %}
 
-    <h2>Services</h2>
+<section id="services">
+  <div class="container mx-auto">
+
+    {{ title('Services') }}
 
     <h4>Motion picture finishing</h4>
     <ul>
