--- a/site/includes/components/upload.njk
+++ b/site/includes/components/upload.njk
@@ -1,6 +1,8 @@
+{% from "components/macros.njk" import title %}
+
 <section id="upload">
-  <div class="container">
-    <h2>Upload</h2>
+  <div class="container mx-auto">
+    {{ title('Upload') }}
 
     <p>A form of things.</p>
   </div>
