--- a/site/includes/components/about.njk
+++ b/site/includes/components/about.njk
@@ -1,6 +1,8 @@
+{% from "components/macros.njk" import title %}
+
 <section id="about">
-  <div class="container">
-    <h2>About</h2>
+  <div class="container mx-auto">
+    {{ title('About') }}
 
     <p>Not long ago, high-end motion picture finishing required expensive turn-key systems and huge overheads, but not anymore.</p>
     <p>A downside of technology becoming so accessible has been many in the new generation of post-production operators who don't fully understand the craft, what they're doing or why they’re doing it. They may be able to get your work through a tech check, but are they making it the best it can be, or letting down your project at the final hurdle?</p>
