--- a/site/includes/components/contact.njk
+++ b/site/includes/components/contact.njk
@@ -1,6 +1,8 @@
+{% from "components/macros.njk" import title %}
+
 <section id="contact">
-  <div class="container">
-    <h2>Conact</h2>
+  <div class="container mx-auto">
+    {{ title('Contact') }}
 
     <img src="images/logo/tfs_logo.png" alt="The Finishing Suite" />
 
