--- a/site/includes/components/portfolio.njk
+++ b/site/includes/components/portfolio.njk
@@ -1,6 +1,8 @@
-<section id="portfolio">
-  <div class="container">
-    <h2>Portfolio</h2>
+{% from "components/macros.njk" import title %}
+
+<section id="portfolio" class="sm:mt-10">
+  <div class="container mx-auto">
+    {{ title('Portfolio') }}
 
     MAGIC GRID
   </div>
