--- a/site/includes/components/about.njk
+++ b/site/includes/components/about.njk
@@ -1,8 +1,6 @@
-{% from "components/macros.njk" import title %}
-
-<section id="about" class="bg-cover bg-center bg-fixed pb-20" style="background-image: url(/images/backgrounds/resolve-panel.jpg)">
+<section id="about" class="section about">
   <div class="container mx-auto">
-    {{ title('About') }}
+    <h2>About</h2>
 
     <p>Not long ago, high-end motion picture finishing required expensive turn-key systems and huge overheads, but not anymore.</p>
     <p>A downside of technology becoming so accessible has been many in the new generation of post-production operators who don't fully understand the craft, what they're doing or why they’re doing it. They may be able to get your work through a tech check, but are they making it the best it can be, or letting down your project at the final hurdle?</p>
