--- a/site/includes/components/portfolio.njk
+++ b/site/includes/components/portfolio.njk
@@ -1,8 +1,6 @@
-{% from "components/macros.njk" import title %}
-
-<section id="portfolio" class="sm:mt-10">
+<section id="portfolio" class="section portfolio sm:mt-10">
   <div class="container mx-auto">
-    {{ title('Portfolio') }}
+    <h2>Portfolio</h2>
 
     MAGIC GRID
   </div>
