--- a/site/includes/components/services.njk
+++ b/site/includes/components/services.njk
@@ -1,9 +1,7 @@
-{% from "components/macros.njk" import title %}
-
-<section id="services">
+<section id="services" class="section services">
   <div class="container mx-auto">
 
-    {{ title('Services') }}
+    <h2>Services</h2>
 
     <h4>Motion picture finishing</h4>
     <ul>
