--- a/site/includes/components/contact.njk
+++ b/site/includes/components/contact.njk
@@ -1,8 +1,6 @@
-{% from "components/macros.njk" import title %}
-
-<section id="contact">
+<section id="contact" class="section contact">
   <div class="container mx-auto">
-    {{ title('Contact') }}
+    <h2>Contact</h2>
 
     <img src="images/logo/tfs_logo.png" alt="The Finishing Suite" />
 
