--- a/site/includes/components/upload.njk
+++ b/site/includes/components/upload.njk
@@ -1,8 +1,6 @@
-{% from "components/macros.njk" import title %}
-
-<section id="upload">
+<section id="upload" class="section upload">
   <div class="container mx-auto">
-    {{ title('Upload') }}
+    <h2>Upload</h2>
 
     <p>A form of things.</p>
   </div>
