--- a/resources/sass/components/_section.scss
+++ b/resources/sass/components/_section.scss
@@ -10,4 +10,16 @@
   &.about {
     background-image: url('/images/backgrounds/resolve-panel.jpg');
   }
+
+  &.contact {
+    background-image: url('/images/backgrounds/bricks.jpg');
+  }
+
+  &.services {
+    background-image: url('/images/backgrounds/couch.jpg');
+  }
+
+  &.upload {
+    background-image: url('/images/backgrounds/cans.jpg');
+  }
 }
