--- a/site/includes/components/portfolio.njk
+++ b/site/includes/components/portfolio.njk
@@ -1,7 +1,9 @@
 <section id="portfolio" class="section portfolio sm:mt-10">
   <div class="container mx-auto">
-    <h2>Portfolio</h2>
-
-    MAGIC GRID
+    <h2 class="pt-0">Portfolio</h2>
   </div>
 </section>
+
+<div class="text-center">
+  MAGIC GRID
+</div>
