--- a/resources/sass/base/_typography.scss
+++ b/resources/sass/base/_typography.scss
@@ -1,14 +1,25 @@
 //==========  Typography ==========//
 
 // Headings
-h1, h2 {
+h1, h2, h3, h4 {
   @apply font-serif;
 }
 
 h2 {
-  @apply pt-10;
-
   @apply font-serif;
   @apply text-center;
   @apply text-5xl;
+}
+
+h3 {
+  @apply text-3xl;
+}
+
+h4 {
+  @apply text-2xl;
+}
+
+// Paragraphs
+p {
+  @apply mb-5;
 }
