--- a/site/includes/components/navbar.njk
+++ b/site/includes/components/navbar.njk
@@ -1,9 +1,9 @@
-<nav class="sticky top-0">
-  <div id="nav-toggle" class="absolute top-0 right-0 cursor-pointer text-2xl mr-3 z-50 opacity-75 sm:hidden">
+<nav>
+  <div id="nav-toggle">
     <i class="fas fa-bars"></i>
   </div>
 
-  <div id="nav" class="hidden absolute w-full bg-black z-40 sm:block">
+  <div id="nav" class="hidden">
     <div class="flex flex-col items-center sm:flex-row sm:justify-center">
       <a class="p-2" href="#portfolio">Portfolio</a>
       <a class="p-2" href="#about">About</a>
