--- a/site/includes/components/portfolio.njk
+++ b/site/includes/components/portfolio.njk
@@ -1,4 +1,4 @@
-<section id="portfolio" class="section portfolio sm:mt-10">
+<section id="portfolio" class="section portfolio">
   <div class="container mx-auto">
     <h2 class="pt-0">Portfolio</h2>
   </div>
