--- a/resources/sass/base/_typography.scss
+++ b/resources/sass/base/_typography.scss
@@ -1,5 +1,10 @@
 //==========  Typography ==========//
 
+// Html
+html {
+  scroll-behavior: smooth;
+}
+
 // Headings
 h1, h2, h3, h4 {
   @apply font-serif;
