--- a/site/includes/components/navbar.njk
+++ b/site/includes/components/navbar.njk
@@ -3,14 +3,12 @@
     <i class="fas fa-bars"></i>
   </div>
 
-  <div id="nav" class="hidden">
-    <div class="flex flex-col items-center sm:flex-row sm:justify-center">
-      <a class="p-2" href="#portfolio">Portfolio</a>
-      <a class="p-2" href="#about">About</a>
-      <a class="p-2" href="#services">Services</a>
-      <a class="p-2" href="#upload">Upload</a>
-      <a class="p-2" href="#contact">Contact</a>
-      <a class="p-2" href="http://www.thefinishingsuite.co.nz/docs/tfs_handover_recommedations_20180528.pdf" target="_blank">Handover</a>
-    </div>
+  <div id="nav">
+    <a href="#portfolio">Portfolio</a>
+    <a href="#about">About</a>
+    <a href="#services">Services</a>
+    <a href="#upload">Upload</a>
+    <a href="#contact">Contact</a>
+    <a href="http://www.thefinishingsuite.co.nz/docs/tfs_handover_recommedations_20180528.pdf" target="_blank">Handover</a>
   </div>
 </nav>
